--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "test": "zest",
     "start": "npx parcel index.html",
     "build": "npx parcel build index.html"
-    
   },
   "repository": {
     "type": "git",
@@ -24,16 +23,18 @@
   "homepage": "https://github.com/shivaniii2/react-learn#readme",
   "devDependencies": {
     "parcel": "^2.11.0",
-    "process": "^0.11.10"
+    "postcss": "^8.4.38",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.1"
   },
-  "browserlist" :[
+  "browserlist": [
     "last 2 versions"
   ],
-  
   "dependencies": {
     "lmdb": "^2.9.2",
     "loader": "^2.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   }
 }
